# blazeremap

./: .editorconfig  .gitignore  .rules  Cargo.toml  README.md  go.mod  go.sum
.github/workflows/: ci.yaml
.zed/: debug.json
cmd/blazeremap/: blazeremap  main.go  main_integration_test.go  main_test.go
cmd/cli/: root.go  root_test.go  test_helper.go
docs/v0.1.0/phase-2/: ARCHITECTURE.md  DECISIONS.md  DOMAIN_MODEL.md  SYSTEM_OVERVIEW.md  phase-2-task-9-performance-results.md
internal/: app.go  app_test.go  app_test_helper.go
internal/device/: manager.go
internal/device/controller/: controller.go  database.go  types.go
internal/platform/: factory.go
internal/platform/linux/: devicemanager.go  errors.go  evdevcontroller.go  usbids.go
internal/ui/cli/: cli.go  cli_test_helper.go  detect.go  detect_test.go  root.go  root_test.go
scripts/: pre-commit-check.sh  test-hardware.sh  test-integration.sh
src/: app.rs  lib.rs  main.rs
src/cli/: detect.rs  mod.rs  read.rs  run.rs  test_keyboard.rs
src/device/: manager.rs  mod.rs
src/device/controller/: database.rs  info.rs  mod.rs  types.rs
src/event/: handler.rs  mod.rs  time.rs  types.rs
src/event/input/: types.rs
src/event/output/: types.rs
src/input/: manager.rs  mod.rs
src/input/gamepad/: info.rs  (+3 more)
src/mapping/: engine.rs  mod.rs  profile.rs  rules.rs  types.rs
src/output/: event.rs  keyboard.rs  mod.rs  types.rs
src/platform/: mod.rs
tests/: README.md  cli_test.rs  hardware_test.rs  latency_hardware_test.rs  types_test.rs  virtual_keyboard_integration_test.rs  virtual_keyboard_test.rs
(+8 files in other folders)
